2001-03-05  Akim Demaille  <akim@epita.fr>

	Make the installation/uninstallation of Info pages follow the
	regular am/recursive scheme.

	* automake.in (%required_targets, %dependencies): Add
	install-info.
	(%dependencies): Add install-info, install-info-am, and
	unstall-info.
	(&handle_subdirs): Don't transform INSTALLINFO, which mapping was
	reversed BTW.  Does anybody use the option `no-installinfo'?
	(&handle_merge_targets): Let the handling of info related targets
	to...
	(&handle_factored_dependencies): this.
	* subdirs.am: Use ?INSTALL-INFO?.
	* texinfos.am: Define the install-info, uninstall-info and
	uninstall-info-am targets.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (%required_targets, %dependencies): Add dvi, info,
	dvi-am, info-am.
	(@info, @dvi): Remove.
	(&handle_texinfo, &handle_merge_targets): Adjust.
	(&handle_factored_dependencies): Required targets are phony.
	* texinfos.am: Build info, dvi, and the corresponding -am or
	-recursive targets.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_install_var): Remove $cygxform, unused.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Transform LIBTOOL.
	(&am_install_var): Remove $ltxform.
	* ltlib.am, progs.am: Adjust.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in: Require AC_PROG_INSTALL in...
	(&scan_autoconf_files): here.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* configure.am: New file.
	* automake.in (&file_contents): Transform CONFIGURE-AC.
	(&handle_texinfo, &handle_configure): Don't transform
	CONFIGURE_AM.
	(&handle_configure): Use `configure.am'.
	* remake-hdr.am, remake.am, texi-vers.am: Adjust to
	MAINTAINER-MODE and CONFIGURE-AC.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&pretty_print_internal): Don't output useless
	spaces.
	(define_pretty_variable): Don't issue the space after the `=' sign
	to avoid trailing spaces in Makefile.ins.

2001-03-05  Akim Demaille  <akim@epita.fr>
