@@ -1,5 +1,11 @@
 2001-03-05  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&do_one_merge_target): Remove, was only called from...
+	(&handle_merge_targets): here for `all'.
+	Adjust.
+
+2001-03-05  Akim Demaille  <akim@epita.fr>
+
 	Make the installation/uninstallation of Info pages follow the
 	regular am/recursive scheme.
 
